Added endpoint for returning details of single product. (#51)
* Added endpoint for returning details of single product.

* Changed the return type to include problem def when product is missing.
